--- a/content/blogs/five-best-food-recipies-you-must-try/index.mdx
+++ b/content/blogs/five-best-food-recipies-you-must-try/index.mdx
@@ -2,6 +2,7 @@
 title: "5 Best Food Recipes You Can Make at Home"
 description: "Discover five delicious and easy-to-make recipes that bring joy and flavor to your kitchen."
 image: pexels-ella-olsson-572949-1640777.jpg
+imageAlt: A delicious spread of homemade food
 publishedAt: 2025-05-25 12:00:00
 updatedAt: 2025-05-25 12:00:00
 author: "priyanshu"
