--- a/content/blogs/five-best-food-recipies-you-must-try/index.mdx
+++ b/content/blogs/five-best-food-recipies-you-must-try/index.mdx
@@ -14,6 +14,7 @@ tags:
 slug: five-best-food-recipies-you-must-try
 ---
 
+# 5 Best Food Recipes You Can Make at Home
 ## Introduction
 
 There's something truly magical about preparing food in your own kitchen — the aroma, the creativity, and the satisfaction of enjoying a dish you made from scratch. Whether you're an experienced home cook or a beginner looking to try something new, having a few go-to recipes can make all the difference.
