--- a/content/blogs/five-mysterious-locations-of-the-world-that-continue-to-baffle-scientists/index.mdx
+++ b/content/blogs/five-mysterious-locations-of-the-world-that-continue-to-baffle-scientists/index.mdx
@@ -2,6 +2,7 @@
 title: "Five Mysterious Locations of the World That Continue to Baffle Scientists"
 description: Explore five of Earth's most mysterious places—from the Bermuda Triangle to the Nazca Lines—filled with legends, theories, and unsolved secrets.
 image: pexels-valentinantonucci-1275393.jpg
+imageAlt: image-22
 publishedAt: 2025-05-24 12:00:00
 updatedAt: 2025-05-24 12:00:00
 author: "priyanshu"
