--- a/content/blogs/great-scientists-of-the-world/index.mdx
+++ b/content/blogs/great-scientists-of-the-world/index.mdx
@@ -2,6 +2,7 @@
 title: "The Great Scientists of the World"
 description: "Science has been the cornerstone of human advancement. Throughout history, there have been individuals whose groundbreaking work has changed the trajectory of humanity. Here’s a look at some of the most influential scientists of all time."
 image: "pexels-pixabay-356040.jpg"
+imageAlt: image-23
 publishedAt: "2025-01-03T13:00:00Z"
 updatedAt: "2025-01-03T13:00:00Z"
 author: "priyanshu"
