--- a/content/blogs/operation-sindoor-comprehensive-overview/index.mdx
+++ b/content/blogs/operation-sindoor-comprehensive-overview/index.mdx
@@ -43,6 +43,14 @@ The operation incorporated sustained surveillance to prevent resurgence. Advance
 
 ---
 
+<Image
+  src="/blogs/pexels-pixabay-78783.jpg"
+  width="718"
+  height="404"
+  alt="Image"
+  sizes="100vw"
+/>
+
 ## Challenges Faced During Operation Sindoor
 
 Operation Sindoor was not without its challenges:
