--- a/content/blogs/wikipedia-the-free-encyclopedia-revolutionizing-global-knowledge-sharing/index.mdx
+++ b/content/blogs/wikipedia-the-free-encyclopedia-revolutionizing-global-knowledge-sharing/index.mdx
@@ -17,12 +17,13 @@ slug: wikipedia-the-free-encyclopedia-revolutionizing-global-knowledge-sharing
 
 # Wikipedia: The Free Encyclopedia Revolutionizing Global Knowledge Sharing
 
-<Image
-  src="/blogs/wiki2.jpg"
-  width="718"
-  height="404"
-  alt="Image"
-  sizes="100vw"
+
+<Image 
+src="/blogs/wiki2.jpg" 
+width={718} 
+height={404} 
+alt="Image" 
+sizes="100vw" 
 />
 
 In an era where information is considered the currency of knowledge, Wikipedia stands tall as one of the most remarkable projects in the history of the internet. As the world’s largest free encyclopedia, Wikipedia has reshaped how people access, share, and contribute knowledge globally. It has grown from a small, experimental website into a vast repository of information, powered by millions of volunteers worldwide.
