--- a/content/blogs/wikipedia-the-free-encyclopedia-revolutionizing-global-knowledge-sharing/index.mdx
+++ b/content/blogs/wikipedia-the-free-encyclopedia-revolutionizing-global-knowledge-sharing/index.mdx
@@ -19,7 +19,7 @@ slug: wikipedia-the-free-encyclopedia-revolutionizing-global-knowledge-sharing
 
 
 <Image 
-src="/blogs/golu.jpg" 
+src="/blogs/golu-boy-4235.jpg" 
 width={718} 
 height={404} 
 alt="Image" 
