--- a/content/blogs/k2-18b-sub-neptune-exoplanet-life/index.mdx
+++ b/content/blogs/k2-18b-sub-neptune-exoplanet-life/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: "K2-18b: The Sub-Neptune Planet That Might Support Life"
 description: "Dive deep into the discovery, features, and scientific significance of exoplanet K2-18b — a sub-Neptune world with water vapor, orbiting in the habitable zone, and raising hopes for extraterrestrial life."
-image: "k2.jpg"
+image: "kepler.jpg"
 imageAlt: "Illustration of K2-18b and its host star"
 publishedAt: "2025-06-22T12:00:00Z"
 updatedAt: "2025-06-22T12:00:00Z"
