--- a/content/blogs/k2-18b-sub-neptune-exoplanet-life/index.mdx
+++ b/content/blogs/k2-18b-sub-neptune-exoplanet-life/index.mdx
@@ -43,7 +43,7 @@ This makes K2-18b an exceptional case in astrobiology and planetary science.
 K2-18b was discovered in **2015** by the **Kepler Space Telescope** during its extended **K2 mission**. The detection was made using the **transit method**, where scientists observe the **dimming of a star’s light** as a planet passes in front of it.
 
 <Image 
-src="/blogs//blogs/kepler-3964a7da.jpg" 
+src="/blogs/kepler-3964a7da.jpg" 
 width={718} 
 height={404} 
 alt="Image" 
