--- a/content/blogs/best-chrome-extensions-powered-by-ai/index.mdx
+++ b/content/blogs/best-chrome-extensions-powered-by-ai/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Best Chrome Extensions Powered by AI You Should Try in 2025"
 description: "Explore the best AI-powered Chrome extensions for productivity, writing, coding, and more. These must-have tools will transform your browser into a smart assistant."
-authorUid: "2Li33a3EM1ZcArSuo34kbEKY8Fy2"
+keywords: ["Character AI", "chatbot", "AI tutorial", "how to use Character AI", "Best AI tools"]
 image: pexels-cottonbro-8721318.jpg
 imageAlt: "AI chatbot characters talking to humans"
 publishedAt: "2025-06-24T10:00:00.000Z"
