--- a/content/blogs/blue-zone-lifestyle-secrets-to-living-over-100-years/index.mdx
+++ b/content/blogs/blue-zone-lifestyle-secrets-to-living-over-100-years/index.mdx
@@ -4,7 +4,7 @@ description: "Discover the science-backed habits of the world's longest-living p
 image: pexels-mikhail-nilov-6740535.jpg
 publishedAt: 2025-05-29 10:30:00
 updatedAt: 2025-05-29 10:30:00
-author: "insightfulminds"
+author: "B2wDa6B7mVZHVLrApA6lmSjL8K63" 
 isPublished: true
 tags:
   - health
