--- a/content/blogs/chatgpt-explained-uses-and-productivity-tips/index.mdx
+++ b/content/blogs/chatgpt-explained-uses-and-productivity-tips/index.mdx
@@ -5,7 +5,7 @@ image: pexels-sanketgraphy-16587313.jpg
 imageAlt: "Person using ChatGPT on a laptop with futuristic digital interface"
 publishedAt: "2025-06-29T10:00:00.000Z"
 updatedAt: "2025-06-29T10:00:00.000Z"
-author: "GhoopsTheBlog"
+author: "B2wDa6B7mVZHVLrApA6lmSjL8K63" 
 isPublished: true
 tags:
   - ChatGPT
