--- a/content/blogs/five-best-food-recipies-you-must-try/index.mdx
+++ b/content/blogs/five-best-food-recipies-you-must-try/index.mdx
@@ -5,7 +5,7 @@ image: pexels-ella-olsson-572949-1640777.jpg
 imageAlt: A delicious spread of homemade food
 publishedAt: 2025-05-25 12:00:00
 updatedAt: 2025-05-25 12:00:00
-author: "priyanshu"
+author: "B2wDa6B7mVZHVLrApA6lmSjL8K63" 
 isPublished: true
 tags:
   - food
