--- a/content/blogs/great-scientists-of-the-world/index.mdx
+++ b/content/blogs/great-scientists-of-the-world/index.mdx
@@ -5,7 +5,7 @@ image: "pexels-pixabay-356040.jpg"
 imageAlt: image-23
 publishedAt: "2025-01-03T13:00:00Z"
 updatedAt: "2025-01-03T13:00:00Z"
-author: "priyanshu"
+author: "B2wDa6B7mVZHVLrApA6lmSjL8K63" 
 isPublished: true
 tags:
   - scientists
