--- a/content/blogs/how-to-use-ai-to-earn-money-in-2025/index.mdx
+++ b/content/blogs/how-to-use-ai-to-earn-money-in-2025/index.mdx
@@ -5,7 +5,7 @@ image: pexels-david-j-saldana-833340727-32716796.jpg
 imageAlt: "AI chatbot characters talking to humans"
 publishedAt: "2025-06-28T10:00:00.000Z"
 updatedAt: "2025-06-28T10:00:00.000Z"
-author: "GhoopsTheBlog"
+author: "B2wDa6B7mVZHVLrApA6lmSjL8K63" 
 isPublished: true
 tags:
   - AI 
