--- a/content/blogs/international-yoga-day-origins-importance-and-global-impact/index.mdx
+++ b/content/blogs/international-yoga-day-origins-importance-and-global-impact/index.mdx
@@ -5,7 +5,7 @@ image: pexels-prasanthinturi-1051838.jpg
 imageAlt: yoga-img
 publishedAt: 2025-06-21T00:00:00+05:30
 updatedAt: 2025-06-21T00:00:00+05:30
-author: "ghoopstheblog"
+author: "B2wDa6B7mVZHVLrApA6lmSjL8K63" 
 isPublished: true
 tags:
   - wellness
