--- a/content/blogs/k2-18b-sub-neptune-exoplanet-life/index.mdx
+++ b/content/blogs/k2-18b-sub-neptune-exoplanet-life/index.mdx
@@ -5,7 +5,7 @@ image: "kepler.jpg"
 imageAlt: "Illustration of K2-18b and its host star"
 publishedAt: "2025-06-22T12:00:00Z"
 updatedAt: "2025-06-22T12:00:00Z"
-author: "Priyanshu Singh and Shivam Singh"
+author: "B2wDa6B7mVZHVLrApA6lmSjL8K63" 
 isPublished: true
 tags:
   - Astrobiology
