--- a/content/blogs/operation-sindoor-comprehensive-overview/index.mdx
+++ b/content/blogs/operation-sindoor-comprehensive-overview/index.mdx
@@ -4,7 +4,7 @@ description: An in-depth look at Operation Sindoor, its objectives, execution, a
 image: pexels-pixabay-78783.jpg
 publishedAt: 2025-05-24 12:00:00
 updatedAt: 2025-05-24 12:00:00
-author: "priyanshu"
+author: "B2wDa6B7mVZHVLrApA6lmSjL8K63" 
 isPublished: true
 tags:
   - operation sindoor
