--- a/content/blogs/top-10-best-movies-of-all-time/index.mdx
+++ b/content/blogs/top-10-best-movies-of-all-time/index.mdx
@@ -4,7 +4,7 @@ description: "Explore the 10 greatest films ever made, spanning genres, decades,
 image: pexels-mediocrememories-1117132.jpg
 publishedAt: 2025-06-18T13:00:00+05:30
 updatedAt: 2025-06-18T13:00:00+05:30
-author: "priyanshu"
+author: "B2wDa6B7mVZHVLrApA6lmSjL8K63" 
 isPublished: true
 tags:
   - movies
