--- a/content/blogs/best-chrome-extensions-powered-by-ai/index.mdx
+++ b/content/blogs/best-chrome-extensions-powered-by-ai/index.mdx
@@ -5,7 +5,7 @@ image: pexels-cottonbro-8721318.jpg
 imageAlt: "AI chatbot characters talking to humans"
 publishedAt: "2025-06-24T10:00:00.000Z"
 updatedAt: "2025-06-24T10:00:00.000Z"
-author: "GhoopsTheBlog"
+author: "B2wDa6B7mVZHVLrApA6lmSjL8K63" 
 isPublished: true
 tags:
   - AI 
