--- a/content/blogs/character-ai-explained-in-detail/index.mdx
+++ b/content/blogs/character-ai-explained-in-detail/index.mdx
@@ -5,7 +5,7 @@ image: "pexels-cottonbro-6153354.jpg"
 imageAlt: "AI chatbot characters talking to humans"
 publishedAt: "2025-06-21T12:00:00Z"
 updatedAt: "2025-06-21T12:00:00Z"
-author: "GhoopsTheBlog"
+author: "B2wDa6B7mVZHVLrApA6lmSjL8K63" 
 isPublished: true
 tags:
   - AI
