--- a/content/blogs/five-mysterious-locations-of-the-world-that-continue-to-baffle-scientists/index.mdx
+++ b/content/blogs/five-mysterious-locations-of-the-world-that-continue-to-baffle-scientists/index.mdx
@@ -5,7 +5,7 @@ image: pexels-valentinantonucci-1275393.jpg
 imageAlt: image-22
 publishedAt: 2025-05-24 12:00:00
 updatedAt: 2025-05-24 12:00:00
-author: "priyanshu"
+author: "B2wDa6B7mVZHVLrApA6lmSjL8K63" 
 isPublished: true
 tags:
   - world
