--- a/content/blogs/the-lost-city-of-atlantis/index.mdx
+++ b/content/blogs/the-lost-city-of-atlantis/index.mdx
@@ -5,7 +5,7 @@ image: pexels-vitor-milanez-939243811-20057005.jpg
 imageAlt: atlantis-img
 publishedAt: 2025-05-28 12:00:00
 updatedAt: 2025-05-28 12:00:00
-author: "priyanshu"
+author: "B2wDa6B7mVZHVLrApA6lmSjL8K63" 
 isPublished: true
 tags:
   - mystery
