--- a/content/blogs/wikipedia-the-free-encyclopedia-revolutionizing-global-knowledge-sharing/index.mdx
+++ b/content/blogs/wikipedia-the-free-encyclopedia-revolutionizing-global-knowledge-sharing/index.mdx
@@ -4,7 +4,7 @@ description: "Discover the history, structure, impact, and challenges of Wikiped
 image: wiki.jpg
 publishedAt: 2025-05-28 12:00:00
 updatedAt: 2025-05-28 12:00:00
-author: "priyanshu"
+author: "B2wDa6B7mVZHVLrApA6lmSjL8K63" 
 isPublished: true
 tags:
 - Wikipedia
