--- a/content/blogs/yoga-sangam-uniting-yogic-traditions-communities-and-consciousness/index.mdx
+++ b/content/blogs/yoga-sangam-uniting-yogic-traditions-communities-and-consciousness/index.mdx
@@ -4,7 +4,7 @@ description: "Explore the purpose, history, and spiritual essence of Yoga Sangam
 image: pexels-pixabay-268134.jpg
 publishedAt: 2025-06-21T00:00:00+05:30
 updatedAt: 2025-06-21T00:00:00+05:30
-author: "ghoopstheblog"
+author: "B2wDa6B7mVZHVLrApA6lmSjL8K63" 
 isPublished: true
 tags:
   - yoga
