--- a/content/blogs/operation-sindoor-comprehensive-overview/index.mdx
+++ b/content/blogs/operation-sindoor-comprehensive-overview/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Operation Sindoor: A Comprehensive Overview"
-description: An in-depth look at Operation Sindoor, its objectives, execution, and impact.
+description: Operation Sindoor was a critical military operation that unfolded with precision, driven by strategic objectives and national security interests. This in-depth analysis explores the mission’s origin, planning, and execution, while highlighting its broader geopolitical impact and implications for regional stability. Discover how the operation unfolded, the intelligence behind it, and what it means for the future of defense strategy in the subcontinent.
 image: pexels-pixabay-78783.jpg
 publishedAt: 2025-05-24 12:00:00
 updatedAt: 2025-05-24 12:00:00
